<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
	</parent>

	<groupId>uk.gov.hmcts</groupId>
	<artifactId>PDDA</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>

	<name>PDDA</name>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<spring.version>6.0.12</spring.version>
		<spring.data.version>3.1.4</spring.data.version>
		<checkstyle.config.location>${basedir}/config/checkstyle/checkstyle.xml</checkstyle.config.location>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>jakarta.activation</groupId>
    				<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>${spring.data.version}</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta.activation</groupId>
    				<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<version>10.1.14</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-activemq</artifactId>
			<version>3.1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-broker</artifactId>
			<version>5.18.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-kahadb-store</artifactId>
			<version>5.18.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
		<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter</artifactId>
    		<version>5.9.2</version>
    		<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.19.0</version>
		</dependency>	
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.19.0</version>
		</dependency>	
		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.21.0-GA</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.openjpa/openjpa-persistence-jdbc -->
		<dependency>
			<groupId>org.apache.openjpa</groupId>
			<artifactId>openjpa-persistence-jdbc</artifactId>
			<version>3.2.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.2</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.codehaus.castor/castor-codegen -->
		<dependency>
		    <groupId>org.codehaus.castor</groupId>
		    <artifactId>castor-codegen</artifactId>
		    <version>1.4.1</version>
		</dependency>
		<dependency>
			<groupId>xalan</groupId>
			<artifactId>serializer</artifactId>
			<version>2.7.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.yoko/yoko-rmi-spec -->
		<dependency>
			<groupId>org.apache.yoko</groupId>
			<artifactId>yoko-rmi-spec</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
			<version>${spring.data.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${spring.data.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
		<dependency>
    		<groupId>com.jcraft</groupId>
    		<artifactId>jsch</artifactId>
    		<version>0.1.55</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-vfs2 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-vfs2</artifactId>
		    <version>2.9.0</version>
		</dependency>		
		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
		<dependency>
		    <groupId>commons-configuration</groupId>
		    <artifactId>commons-configuration</artifactId>
		    <version>1.10</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.2</version>
        </dependency>
		<!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
		<dependency>
		    <groupId>org.easymock</groupId>
		    <artifactId>easymock</artifactId>
		    <version>4.3</version>
		    <scope>test</scope>
		</dependency>
	   	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>5.2.0</version>
    		<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-inline</artifactId>
    		<version>5.2.0</version>
    		<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-junit-jupiter</artifactId>
    		<version>5.2.0</version>
    		<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
		<dependency>
		    <groupId>net.bytebuddy</groupId>
		    <artifactId>byte-buddy</artifactId>
		    <version>1.14.1</version>
		</dependency>
	   	<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
		<dependency>
		    <groupId>jakarta.servlet</groupId>
		    <artifactId>jakarta.servlet-api</artifactId>
		    <version>6.0.0</version>
		    <scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.web/jakarta.servlet.jsp.jstl -->	
		<dependency>
		  	<groupId>org.glassfish.web</groupId>
		    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
		    <version>3.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api -->
		<dependency>
    		<groupId>jakarta.servlet.jsp.jstl</groupId>
    		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
    		<version>3.0.0</version>
		</dependency>
		<dependency>
        	<groupId>jakarta.servlet.jsp</groupId>
       	 	<artifactId>jakarta.servlet.jsp-api</artifactId>
        	<version>3.1.0</version>
        	<scope>provided</scope>
    	</dependency>
    	<dependency>
        	<groupId>jakarta.el</groupId>
        	<artifactId>jakarta.el-api</artifactId>
        	<version>5.0.1</version>
    	</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-spring -->
		<dependency>
		    <groupId>org.apache.activemq</groupId>
		    <artifactId>activemq-spring</artifactId>
		    <version>5.17.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.tomee/openejb-core -->
		<dependency>
		    <groupId>org.apache.tomee</groupId>
		    <artifactId>openejb-core</artifactId>
		    <version>9.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>2.0.7</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-hdfs-client -->
		<dependency>
		    <groupId>org.apache.hadoop</groupId>
		    <artifactId>hadoop-hdfs-client</artifactId>
		    <version>3.3.6</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
		<dependency>
		    <groupId>org.hsqldb</groupId>
		    <artifactId>hsqldb</artifactId>
		    <version>2.7.2</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
		<dependency>
		    <groupId>org.yaml</groupId>
		    <artifactId>snakeyaml</artifactId>
		    <version>2.0</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/org.apache.tomee/jakartaee-api -->
		<dependency>
		    <groupId>org.apache.tomee</groupId>
		    <artifactId>jakartaee-api</artifactId>
		    <version>10.0-M1</version>
		    <exclusions>
				<exclusion>
					<groupId>jakarta.activation</groupId>
    				<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jakarta.json</groupId>
    				<artifactId>jakarta.json-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.15.2</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.15.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/jakarta.jms/jakarta.jms-api -->
		<dependency>
		    <groupId>jakarta.jms</groupId>
		    <artifactId>jakarta.jms-api</artifactId>
		    <version>3.1.0</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
		<dependency>
    		<groupId>org.apache.tomcat.embed</groupId>
    		<artifactId>tomcat-embed-core</artifactId>
    		<version>10.1.14</version>
		</dependency>
		<!-- OVERRIDING DEPENDENCY -->
		<!-- https://mvnrepository.com/artifact/com.squareup.okio/okio-jvm -->
		<dependency>
    		<groupId>com.squareup.okio</groupId>
    		<artifactId>okio-jvm</artifactId>
    		<version>3.5.0</version>
    		<scope>runtime</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
			<plugins>
				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<argLine>
							--add-opens=java.base/java.lang=ALL-UNNAMED
							--add-opens=java.base/java.time=ALL-UNNAMED
							--add-opens=java.base/java.util=ALL-UNNAMED
						</argLine>
					</configuration>	
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>17</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
					<executions>
						<execution>
							<id>install-jar-lib</id>
							<goals>
								<goal>install-file</goal>
							</goals>
							<phase>validate</phase>
							<configuration>
								<groupId>org.codehaus.castor</groupId>
								<artifactId>castor</artifactId>
								<version>1.0</version>
								<packaging>jar</packaging>
								<file>${basedir}/dependencies/castor-1.0.jar</file>
								<generatePom>true</generatePom>
							</configuration>
						</execution>
						<execution>
							<id>install-jar-lib2</id>
							<goals>
								<goal>install-file</goal>
							</goals>
							<phase>validate</phase>
							<configuration>
								<groupId>xalan</groupId>
								<artifactId>serializer</artifactId>
								<version>2.7.2</version>
								<packaging>jar</packaging>
								<file>${basedir}/dependencies/serializer-2.7.2.jar</file>
								<generatePom>true</generatePom>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
      <plugins>
		<plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-pmd-plugin</artifactId>
	        <version>3.21.0</version>
	        <configuration>
                <rulesets>
                    <ruleset>${basedir}/config/pmd/ruleset.xml</ruleset>
                </rulesets>
            </configuration>
	    </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.3.0</version>
          <reportSets>
            <reportSet>
              <reports>
                <report>checkstyle</report>
              </reports>
            </reportSet>
          </reportSets>
        </plugin>
      </plugins>
    </reporting>
</project>
